# TrafficRL

./: .gitignore  README.md  continued_dqn_config.json  custom_config.py  install.sh  pyproject.toml  requirements.txt  setup.py  test_installation.py
configs/: benchmark_config.yaml  default_config.yaml  dqn_config.yaml  entity_dqn_config.yaml  ppo_config.yaml  simple_dqn_config.yaml
logs/: log
results/: default_config.json  training_config.json
traffic_rl/: __init__.py  analyze.py  analyze_traffic_patterns.py  analyze_training.py  benchmark.py  cli.py  config.py  evaluate.py  main.py  train.py
traffic_rl/agents/: __init__.py  dqn_agent.py  entity_dqn_agent.py  ppo_agent.py  simple_dqn_agent.py
traffic_rl/analysis/: __init__.py  comparative.py  traffic_patterns.py  training.py
traffic_rl/benchmark/: __init__.py  agents.py  core.py  visualization.py
traffic_rl/environment/: README_ROUNDABOUT.md  __init__.py  car.py  roundabout_simulation.py  traffic_simulation.py
traffic_rl/memory/: prioritized_buffer.py  replay_buffer.py
traffic_rl/models/: dqn.py  entity_dqn.py  per_intersection_dqn.py  simple_dqn.py
traffic_rl/results/training/: training_config.json  training_metrics.json
traffic_rl/utils/: analysis.py  benchmark.py  environment.py  logging.py  visualization.py
