[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic_rl"
version = "0.1.0"
description = "Reinforcement Learning for Traffic Light Control"
readme = "README.md"
authors = [
    {name = "Traffic RL Team"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
    "torch>=2.0.0",
    "matplotlib>=3.3.0",
    "gymnasium>=0.26.0",
    "pygame>=2.0.0",
    "pandas>=1.1.0",
    "seaborn>=0.11.0",
    "tqdm>=4.65.0",
]

[project.scripts]
traffic_rl = "traffic_rl.cli:main"

[tool.setuptools]
packages = ["traffic_rl"] 